--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "classnames": "2.2.6",
     "react": "16.12.0",
     "react-display-name": "0.2.5",
-    "react-scripts": "^3.3.1"
+    "react-scripts": "3.3.1"
   },
   "devDependencies": {
     "@types/classnames": "2.2.7",
     "@types/enzyme": "3.10.4",
     "@types/enzyme-adapter-react-16": "1.0.5",
-    "@types/jest": "^23.3.13",
-    "@types/node": "^10.12.19",
+    "@types/jest": "23.3.13",
+    "@types/node": "10.12.19",
     "@types/prop-types": "15.7.3",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
@@ -41,14 +41,14 @@
     "gh-pages": "2.0.1",
     "license-check-and-add": "2.3.6",
     "react-docgen-typescript": "1.12.3",
-    "react-dom": "^16.12.0",
+    "react-dom": "16.12.0",
     "react-styleguidist": "7.2.5",
     "rivet-collapsible": "0.2.10",
     "rivet-switch": "0.3.1",
     "rivet-uits": "1.6.0",
     "semantic-release": "15.9.12",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.5"
+    "typescript": "3.7.5",
+    "webpack": "4.41.5"
   },
   "files": [
     "build/dist/components",
