--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "dependencies": {
     "classnames": "2.2.6",
     "react": "16.12.0",
-    "react-display-name": "0.2.5",
-    "react-scripts": "3.3.1"
+    "react-display-name": "0.2.5"
   },
   "devDependencies": {
     "@types/classnames": "2.2.9",
@@ -42,6 +41,7 @@
     "license-check-and-add": "3.0.4",
     "react-docgen-typescript": "1.16.2",
     "react-dom": "16.12.0",
+    "react-scripts": "^3.3.1",
     "react-styleguidist": "10.6.1",
     "rivet-collapsible": "0.2.11",
     "rivet-switch": "0.3.2",
