--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "npx styleguidist server",
     "build": "rm -rf ./build/dist && tsc -p tsconfig.dist.json",
-    "license": "license-check-and-add",
+    "license": "license-check-and-add add -f ./license-check-and-add-config.json",
     "publish-guide": "npx styleguidist build && cp -r .circleci styleguide && gh-pages --dist styleguide --dotfiles",
     "watch": "react-scripts start",
     "test": "react-scripts test",
@@ -38,7 +38,7 @@
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "gh-pages": "2.2.0",
-    "license-check-and-add": "2.3.6",
+    "license-check-and-add": "3.0.4",
     "react-docgen-typescript": "1.16.2",
     "react-dom": "16.12.0",
     "react-scripts": "3.3.1",
@@ -59,23 +59,5 @@
       "src/components/**/*.{js,jsx,ts,tsx}",
       "!src/components/**/index.{ts,tsx}"
     ]
-  },
-  "license-check-and-add-config": {
-    "folder": ".",
-    "license": "license-header.txt",
-    "exact_paths_method": "INCLUDE",
-    "exact_paths": [
-      "addons",
-      "src",
-      "styleguide.config.js"
-    ],
-    "file_type_method": "INCLUDE",
-    "file_types": [
-      ".js",
-      ".jsx",
-      ".ts",
-      ".tsx"
-    ],
-    "insert_license": true
   }
 }
