--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
       "dom"
     ],
     "sourceMap": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "moduleResolution": "node",
     "rootDir": "src",
     "forceConsistentCasingInFileNames": true,
