--- a/package.json
+++ b/package.json
@@ -24,33 +24,37 @@
   },
   "dependencies": {
     "classnames": "2.3.1",
-    "react": "16.14.0",
+    "react": "17.0.2",
     "react-display-name": "0.2.5"
   },
   "devDependencies": {
     "@types/classnames": "2.3.1",
-    "@types/enzyme": "3.10.10",
+    "@types/enzyme": "3.10.12",
     "@types/enzyme-adapter-react-16": "1.0.6",
-    "@types/jest": "27.0.3",
-    "@types/node": "13.7.0",
-    "@types/prop-types": "15.7.4",
-    "@types/react": "16.9.56",
-    "@types/react-dom": "16.9.8",
+    "@types/jest": "28.1.7",
+    "@types/node": "18.7.6",
+    "@types/prop-types": "15.7.5",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
     "codecov.io": "0.1.6",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.6",
-    "gh-pages": "3.2.3",
-    "license-check-and-add": "4.0.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.6.7",
+    "gh-pages": "4.0.0",
+    "license-check-and-add": "4.0.5",
     "react-docgen-typescript": "2.2.2",
-    "react-dom": "16.14.0",
+    "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
-    "react-styleguidist": "11.1.7",
+    "react-styleguidist": "11.2.0",
     "rivet-collapsible": "0.2.13",
     "rivet-switch": "0.3.2",
     "rivet-uits": "1.8.2",
-    "semantic-release": "18.0.1",
+    "semantic-release": "19.0.3",
     "typescript": "4.4.4",
     "webpack": "4.44.2"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   },
   "eslintConfig": {
     "extends": [
