--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     "preview": "vite preview"
   },
   "peerDependencies": {
+    "classnames": "2.3.1",
     "react": ">= 16",
     "react-dom": ">= 16"
   },
   "devDependencies": {
+    "prop-types": "15.8.1",
+    "react-styleguidist": "11.2.0",
+    "rivet-collapsible": "0.2.13",
+    "rivet-switch": "0.3.2",
+    "rivet-uits": "1.8.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
