--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     }
   },
   "scripts": {
+    "start": "styleguidist server --config styleguide.config.cjs",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "dependencies": {
+    "rivet-core": "2.1.0"
   },
   "peerDependencies": {
     "classnames": "2.3.1",
@@ -32,15 +36,21 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "babel-loader": "^8.2.5",
+    "core-js": "3.25.5",
+    "css-loader": "6.7.1",
     "path": "0.12.7",
     "prop-types": "15.8.1",
     "react-docgen": "5.4.3",
     "react-scripts": "5.0.1",
     "react-styleguidist": "11.2.0",
-    "rivet-collapsible": "0.2.13",
-    "rivet-switch": "0.3.2",
-    "rivet-uits": "1.8.2",
+    "style-loader": "3.3.1",
     "vite": "^3.1.0",
     "vite-plugin-externalize-deps": "0.1.5"
-  }
+  },
+  "browserslist": [
+    ">1%",
+    "last 1 version",
+    "Firefox ESR",
+    "not dead"
+  ]
 }
