--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   "scripts": {
     "start": "styleguidist server --config styleguide.config.cjs",
     "dev": "vite",
+    "test": "NODE_ENV=test jest",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "2.3.1",
     "rivet-core": "2.1.0"
   },
   "peerDependencies": {
-    "classnames": "2.3.1",
     "react": ">= 16",
     "react-dom": ">= 16"
   },
@@ -32,17 +33,21 @@
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "babel-loader": "^8.2.5",
     "core-js": "3.25.5",
     "css-loader": "6.7.1",
+    "jest": "27.5.1",
     "path": "0.12.7",
     "prop-types": "15.8.1",
     "react-docgen": "5.4.3",
     "react-scripts": "5.0.1",
-    "react-styleguidist": "11.2.0",
+    "react-styleguidist": "13.0.0",
     "style-loader": "3.3.1",
     "vite": "^3.1.0",
     "vite-plugin-externalize-deps": "0.1.5"
